fix spacing of loader

--- a/mockup/less/ui.less
+++ b/mockup/less/ui.less
@@ -6,7 +6,7 @@
   display:none;
   position: fixed;
   top: 50%;
-  left: 50%;
+  left: ~"calc(50% - 2.5em)";
 
   div {
     margin: -6em auto;
